deployment-k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: steedos-com-test
  labels:
    the-namespace-name: steedos-com-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: steedos-com-test
  name: steedos-com-test
  namespace: steedos-com-test
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: steedos-com-test
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: steedos-com-test
    spec:
      imagePullSecrets:
        - name: steedos-account
      imagePullPolicy: Always
      containers:
        - image: ecr.aws.steedos.cn/ivscode/steedos/steedos.com:latest
          name: steedos-com-test
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "4"
              memory: "4Gi"
              ephemeral-storage: 800Mi #定义存储的限制为800M
            requests:
              cpu: "0.5"
              memory: "0.5Gi"
              ephemeral-storage: 800Mi
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: steedos-com-test
  name: steedos-com-test-svc
  namespace: steedos-com-test
spec:
  ports:
    - name: http-5000
      port: 5000
      protocol: TCP
      targetPort: 3000
  selector:
    io.kompose.service: steedos-com-test
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "1000M"
  name: steedos-com-test-ingress
  namespace: steedos-com-test
spec:
  rules:
    - host: docs.steedos.cn
      http:
        paths:
          - backend:
              serviceName: steedos-com-test-svc
              servicePort: 5000
            path: /
  tls:
    - hosts:
        - docs.steedos.cn
      secretName: steedos-http-tls-secret
